Refactor the sleep function away, add global nop targets for timer and keyboard

--- a/assembler/cursor_test/Makefile
+++ b/assembler/cursor_test/Makefile
@@ -1,7 +1,7 @@
 # vim: ts=4 sts=4 sw=4 noexpandtab
 
 SOURCES := cursor_test.asm 
-LIBS := ../lib/clearscreen.asm ../lib/cursor.asm ../lib/keyboard.asm ../lib/math.asm
+LIBS := ../lib/clearscreen.asm ../lib/timer.asm ../lib/cursor.asm ../lib/keyboard.asm ../lib/math.asm
 OPCODES := ../gen_opcodes.sh
 MACROS := ../asm_macros
 
@@ -11,7 +11,7 @@ opcodes.out: $(OPCODES)
 	bash -c "$(OPCODES) > $@"
 
 cursor_test.hex: $(SOURCES) $(LIBS) opcodes.out $(MACROS)
-	../assembler.py -v -v --opcodes opcodes.out $(foreach asm_macro, $(MACROS), --macros $(asm_macro)) $(SOURCES) $(LIBS) --output $@ 2>&1 | tee assembler.log
+	../assembler.py -v -v --opcodes opcodes.out $(foreach asm_macro, $(MACROS), --macros $(asm_macro)) $(SOURCES) $(LIBS) --output $@
 
 program: cursor_test.hex
 	/raid/msp430/projects/serial-eeprom-programmer/programmer --verify write cursor_test.hex
