Compile malloc.asm as well

--- a/assembler/os_shell/Makefile
+++ b/assembler/os_shell/Makefile
@@ -2,7 +2,8 @@
 
 SOURCES := 00-main.asm 10-shell_command.asm
 LIBS := ../lib/uart.asm ../lib/keyboard.asm ../lib/timer.asm ../lib/clearscreen.asm ../lib/string.asm ../lib/heap.asm \
-		../lib/cursor.asm ../lib/terminal_output.asm ../lib/math.asm ../lib/sprintf.asm ../lib/terminal_input.asm
+		../lib/cursor.asm ../lib/terminal_output.asm ../lib/math.asm ../lib/sprintf.asm ../lib/terminal_input.asm \
+		../lib/malloc.asm
 OPCODES := ../gen_opcodes.sh
 MACROS := ../asm_macros
 
