--- a/assembler/os_shell/Makefile
+++ b/assembler/os_shell/Makefile
@@ -1,9 +1,9 @@
 # vim: ts=4 sts=4 sw=4 noexpandtab
 
-SOURCES := 00-main.asm 10-shell_command.asm
+SOURCES := 00-main.asm 10-shell_command.asm 20-cmd_*.asm
 LIBS := ../lib/uart.asm ../lib/keyboard.asm ../lib/timer.asm ../lib/clearscreen.asm ../lib/string.asm ../lib/heap.asm \
 		../lib/cursor.asm ../lib/terminal_output.asm ../lib/math.asm ../lib/sprintf.asm ../lib/terminal_input.asm \
-		../lib/malloc.asm ../lib/memfill.asm ../lib/memcpy.asm
+		../lib/malloc.asm ../lib/memfill.asm ../lib/memcpy.asm ../lib/system.asm
 OPCODES := ../gen_opcodes.sh
 MACROS := ../asm_macros
 
@@ -16,5 +16,5 @@ os.hex: $(SOURCES) $(LIBS) opcodes.out $(MACROS)
 	../assembler.py -v --opcodes opcodes.out $(foreach asm_macro, $(MACROS), --macros $(asm_macro)) $(SOURCES) $(LIBS) --output $@ 2>&1 | tee assembler.log
 
 program: os.hex
-	/raid/msp430/projects/serial-eeprom-programmer/programmer --verify write os.hex
+	/raid/msp430/projects/serial-eeprom-programmer/programmer write os.hex
 
