--- a/assembler/os_shell/Makefile
+++ b/assembler/os_shell/Makefile
@@ -4,7 +4,7 @@ SOURCES := 00-main.asm 10-shell_command.asm 20-cmd_*.asm
 LIBS := ../lib/uart.asm ../lib/keyboard.asm ../lib/timer.asm ../lib/clearscreen.asm ../lib/string.asm ../lib/heap.asm \
 		../lib/cursor.asm ../lib/terminal_output.asm ../lib/math.asm ../lib/sprintf.asm ../lib/terminal_input.asm \
 		../lib/malloc.asm ../lib/memfill.asm ../lib/memcpy.asm ../lib/system.asm ../lib/strtoi.asm ../lib/ata.asm \
-		../lib/extmalloc.asm ../lib/fat16_mount.asm
+		../lib/extmalloc.asm ../lib/fat16_mount.asm ../lib/fat16_calc.asm
 OPCODES := ../gen_opcodes.sh
 MACROS := ../asm_macros
 
