Set up build system for ODY commands

--- a/assembler/os_shell/Makefile
+++ b/assembler/os_shell/Makefile
@@ -1,24 +1,31 @@
 # vim: ts=4 sts=4 sw=4 noexpandtab
 
-SOURCES := 00-main.asm 10-shell_command.asm 20-cmd_*.asm
-LIBS := ../lib/uart.asm ../lib/keyboard.asm ../lib/timer.asm ../lib/clearscreen.asm ../lib/string.asm ../lib/heap.asm \
-		../lib/cursor.asm ../lib/terminal_output.asm ../lib/math.asm ../lib/sprintf.asm ../lib/terminal_input.asm \
-		../lib/malloc.asm ../lib/memfill.asm ../lib/memcpy.asm ../lib/system.asm ../lib/strtoi.asm ../lib/ata.asm \
-		../lib/extmalloc.asm ../lib/fat16_mount.asm ../lib/fat16_calc.asm ../lib/fat16_dirent.asm ../lib/fat16_readfile.asm \
-		../lib/fat16_dir.asm ../lib/fat16_util.asm
+BIOS_SOURCES := 00-main.asm 10-shell_command.asm 20-cmd_*.asm
+LIBS := $(wildcard lib/*.asm)
 OPCODES := ../gen_opcodes.sh
 MACROS := ../asm_macros
+SHELL_COMMANDS := $(shell find . -mindepth 1 -maxdepth 1 -type d -exec test -e '{}/Makefile' \; -print)
 
-all: os.hex
+all: os.hex $(SHELL_COMMANDS:%=%/all)
 
 opcodes.out: $(OPCODES)
 	bash -c "$(OPCODES) > $@"
 
-os.hex: $(SOURCES) $(LIBS) opcodes.out $(MACROS)
-	../assembler.py -v --opcodes opcodes.out $(foreach asm_macro, $(MACROS), --macros $(asm_macro)) $(SOURCES) $(LIBS) --output $@ --output-symbols $(@:.hex=.sym) 2>&1 | tee assembler.log
+os.hex os.sym: $(BIOS_SOURCES) $(LIBS) opcodes.out $(MACROS)
+	../assembler.py -v --opcodes opcodes.out $(foreach asm_macro, $(MACROS), --macros $(asm_macro)) $(BIOS_SOURCES) $(LIBS) --output $@ --output-symbols $(@:.hex=.sym) 2>&1 | tee assembler.log
+
+$(SHELL_COMMANDS:%=%/all): os.sym opcodes.out
+	$(MAKE) -C $(@D)
 
 program: os.hex
 	~/serial-eeprom-programmer/programmer write os.hex
 
 program1: os.hex
 	~/serial-eeprom-programmer/programmer --port /dev/ttyUSB1 write os.hex
+
+clean:
+	rm -f os.hex os.sym opcodes.out
+	@for dir in $(SHELL_COMMANDS); do \
+		$(MAKE) -C $$dir clean; \
+	done
+
