--- a/assembler/os_shell/clkspeed/Makefile
+++ b/assembler/os_shell/clkspeed/Makefile
@@ -4,7 +4,7 @@ DIRNAME := $(notdir $(CURDIR))
 FILENAME := $(shell echo $(DIRNAME) | tr '[:lower:]' '[:upper:]').ODY
 ASM_FILES := $(sort $(wildcard *.asm))
 MACROS := $(shell ls -1 ../../asm_macros asm_macros 2>/dev/null)
-MEM_TARGET=ext-d
+MEM_TARGET=main
 
 # ensure `tee` pipe doesn't mask assembler failures
 SHELL := /bin/bash
@@ -16,5 +16,12 @@ $(FILENAME): $(ASM_FILES) ../os.sym ../opcodes.out
 	@[ $$(echo -n $(DIRNAME) | wc -c) -le 8 ] # command names cannot be more than 8 characters
 	../../assembler.py $(VERBOSE_FLAG) --opcodes ../opcodes.out --symbols ../os.sym $(foreach asm_macro, $(MACROS), --macros $(asm_macro)) --odyssey --odyssey-target $(MEM_TARGET) --output $(FILENAME) $(ASM_FILES) 2>&1 | tee assembler.log
 
+.PHONY: sdcard
+sdcard: $(FILENAME)
+	@test -d $(INSTALL_DIRECTORY) || ( echo ERROR: $(INSTALL_DIRECTORY) does not exist && exit 1 )
+	@mkdir -p $(INSTALL_DIRECTORY)/SYS
+	@cp -v $(FILENAME) $(INSTALL_DIRECTORY)/SYS/$(FILENAME)
+
+.PHONY: clean
 clean:
 	rm -f $(FILENAME)
